# DorleCoAV

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/av_messages/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/behaviour_planner/: .catkin  .rosinstall  setup.sh
devel/.private/camera_object_detector/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/control_pid_stanley/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/ekf_slam/: .catkin  .rosinstall  setup.sh
devel/.private/global_planner/: .catkin
devel/.private/lane_detector/: .catkin
devel/.private/local_planner/: .catkin  local_setup.sh  setup.sh
devel/.private/pseudo_structure/: .catkin  setup.sh
devel/.private/road_segmentation/: .catkin  .rosinstall  setup.sh
devel/.private/stereo_depth/: .catkin  setup.sh
devel/.private/traffic_lights_detector/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/av_messages/: carState.h  carStateDT.h  controlCommand.h  depthandimage.h  destination.h  globalPlan.h  laneDetections.h  lanes.h  localPlan.h  map.h  object.h  objects.h  trafficLights.h  velAccel.h  wayPoint.h
devel/lib/pkgconfig/: av_messages.pc  behaviour_planner.pc  camera_object_detector.pc  catkin_tools_prebuild.pc  control_pid_stanley.pc  ekf_slam.pc  global_planner.pc  lane_detector.pc  local_planner.pc  pseudo_structure.pc  road_segmentation.pc  stereo_depth.pc  traffic_lights_detector.pc
devel/share/av_messages/cmake/: av_messages-msg-extras.cmake  av_messages-msg-paths.cmake  av_messagesConfig-version.cmake  av_messagesConfig.cmake
devel/share/behaviour_planner/cmake/: behaviour_plannerConfig-version.cmake  behaviour_plannerConfig.cmake
devel/share/camera_object_detector/cmake/: camera_object_detectorConfig-version.cmake  camera_object_detectorConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/control_pid_stanley/cmake/: control_pid_stanleyConfig-version.cmake  control_pid_stanleyConfig.cmake
devel/share/ekf_slam/cmake/: ekf_slamConfig-version.cmake  ekf_slamConfig.cmake
devel/share/global_planner/cmake/: global_plannerConfig-version.cmake  global_plannerConfig.cmake
devel/share/lane_detector/cmake/: lane_detectorConfig-version.cmake  lane_detectorConfig.cmake
devel/share/local_planner/cmake/: local_plannerConfig-version.cmake  local_plannerConfig.cmake
devel/share/pseudo_structure/cmake/: pseudo_structureConfig-version.cmake  pseudo_structureConfig.cmake
devel/share/road_segmentation/cmake/: road_segmentationConfig-version.cmake  road_segmentationConfig.cmake
devel/share/stereo_depth/cmake/: stereo_depthConfig-version.cmake  stereo_depthConfig.cmake
devel/share/traffic_lights_detector/cmake/: traffic_lights_detectorConfig-version.cmake  traffic_lights_detectorConfig.cmake
logs/av_messages/: build.check.001.log.stderr  build.check.003.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr  build.cmake.004.log.stderr
logs/stereo_depth/: build.check.005.log.stderr
src/av_messages/: CMakeLists.txt  package.xml
src/av_messages/msg/: carState.msg  carStateDT.msg  controlCommand.msg  depthandimage.msg  destination.msg  globalPlan.msg  localPlan.msg  map.msg  object.msg  objects.msg  trafficLights.msg  velAccel.msg  wayPoint.msg
src/controls/: readme.md
src/controls/control_pid_stanley/: CMakeLists.txt
src/controls/pseudo_structure/: CMakeLists.txt  package.xml
src/controls/pseudo_structure/config/: pseudo_structure.yaml
src/controls/pseudo_structure/launch/: pub.launch
src/controls/pseudo_structure/scripts/: main.py  sample_struct.py
src/perception/: readme.md
src/perception/camera_object_detector/: CMakeLists.txt  package.xml
src/perception/camera_object_detector/launch/: object_detector.launch
src/perception/camera_object_detector/scripts/: camera_object_detector.py  main.py
src/perception/lane_detector/: CMakeLists.txt
src/perception/lane_detector/scripts/: lane_detector.py  main.py
src/perception/road_segmentation/: CMakeLists.txt  package.xml
src/perception/stereo_depth/: CMakeLists.txt  package.xml
src/perception/traffic_lights_detector/: CMakeLists.txt  package.xml
src/planning/: readme.md
src/planning/behaviour_planner/: CMakeLists.txt  package.xml
src/planning/global_planner/: package.xml
src/planning/local_planner/: CMakeLists.txt
src/slam/: readme.md
src/slam/ekf_slam/: package.xml
(+212 files in other folders)
